import { Entity, Column, OneToMany, ManyToOne, JoinColumn } from 'typeorm';
import { ObjectType, Field, ID, registerEnumType } from '@nestjs/graphql';

import { BaseEntity } from './base.entity';
import { GameTeam } from './game-team.entity';
import { GameEvent } from './game-event.entity';
import { GameFormat } from './game-format.entity';
import { StatsTrackingLevel } from './team-configuration.entity';

export enum GameStatus {
  SCHEDULED = 'SCHEDULED',
  FIRST_HALF = 'FIRST_HALF',
  HALFTIME = 'HALFTIME',
  SECOND_HALF = 'SECOND_HALF',
  IN_PROGRESS = 'IN_PROGRESS', // Legacy - treated as FIRST_HALF
  COMPLETED = 'COMPLETED',
  CANCELLED = 'CANCELLED',
}

registerEnumType(GameStatus, {
  name: 'GameStatus',
  description: 'The status of a game',
});

@ObjectType()
@Entity('games')
export class Game extends BaseEntity {
  @Field(() => ID)
  @Column('uuid')
  gameFormatId: string;

  @Field({ nullable: true })
  @Column({ length: 255, nullable: true })
  name?: string;

  @Field({ nullable: true })
  @Column({ type: 'timestamptz', nullable: true })
  scheduledStart?: Date;

  @Field({ nullable: true })
  @Column({ length: 255, nullable: true })
  venue?: string;

  @Field({ nullable: true })
  @Column({ length: 255, nullable: true })
  weatherConditions?: string;

  @Field({ nullable: true })
  @Column({ type: 'text', nullable: true })
  notes?: string;

  @Field(() => GameStatus)
  @Column({
    type: 'varchar',
    length: 20,
    default: GameStatus.SCHEDULED,
  })
  status: GameStatus;

  @Field({ nullable: true })
  @Column({ type: 'timestamptz', nullable: true })
  actualStart?: Date;

  @Field({ nullable: true })
  @Column({ type: 'timestamptz', nullable: true })
  firstHalfEnd?: Date;

  @Field({ nullable: true })
  @Column({ type: 'timestamptz', nullable: true })
  secondHalfStart?: Date;

  @Field({ nullable: true })
  @Column({ type: 'timestamptz', nullable: true })
  actualEnd?: Date;

  @Field({
    nullable: true,
    description: 'When the game clock was paused (null = not paused)',
  })
  @Column({ type: 'timestamptz', nullable: true })
  pausedAt?: Date;

  @Field(() => StatsTrackingLevel, {
    nullable: true,
    description: 'Override for stats tracking level (null = use team default)',
  })
  @Column({
    type: 'varchar',
    length: 20,
    nullable: true,
  })
  statsTrackingLevel?: StatsTrackingLevel;

  @Field({
    nullable: true,
    description:
      'Override for game duration in minutes (null = use game format default)',
  })
  @Column({ type: 'int', nullable: true })
  durationMinutes?: number;

  // Note: statsFeatureOverrides field is excluded from GraphQL schema to avoid type complexity
  // Feature toggles can be overridden per-game (trackSubstitutions, trackPossession, etc.)
  @Column({ type: 'json', nullable: true })
  statsFeatureOverrides?: {
    trackSubstitutions?: boolean;
    trackPossession?: boolean;
    trackShots?: boolean;
    trackCorners?: boolean;
    trackFouls?: boolean;
    trackOffsides?: boolean;
    trackSaves?: boolean;
  };

  @Field(() => GameFormat)
  @ManyToOne(() => GameFormat, (gameFormat) => gameFormat.games, {
    nullable: false,
  })
  @JoinColumn({ name: 'gameFormatId' })
  gameFormat: GameFormat;

  @Field(() => [GameTeam], { nullable: true })
  @OneToMany(() => GameTeam, (gameTeam) => gameTeam.game, { cascade: true })
  gameTeams: GameTeam[];

  @Field(() => [GameEvent], { nullable: true })
  @OneToMany(() => GameEvent, (gameTeam) => gameTeam.game, { cascade: true })
  gameEvents: GameEvent[];
}
